--- a/css/main.css
+++ b/css/main.css
@@ -24,11 +24,56 @@ body {
 
 input,
 select {
-  padding: 0.2rem;
-  font-size: inherit;
+  font-family: inherit;
+  width: 100%;
+  border: 0;
+  border-bottom: 3px solid #ececec;
+  outline: 0;
+  font-size: 1.3rem;
   color: inherit;
-  border: 1px solid rgb(73, 73, 73);
-  border-radius: 4px;
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s;
+  transition: border-bottom 0.3s linear;
+}
+
+input:focus,
+select:focus {
+  padding-bottom: 6px;
+  font-weight: 700;
+  border-width: 3px;
+  border-image: linear-gradient(to right, #11998e, #38ef7d);
+  border-image-slice: 1;
+}
+
+input:focus ~ label,
+select:focus ~ label {
+  position: absolute;
+  top: 0;
+  display: block;
+  transition: 0.2s;
+  font-size: 1rem;
+  color: #11998e;
+  font-weight: 700;
+}
+
+input::placeholder {
+  color: transparent;
+}
+
+input:placeholder-shown ~ label {
+  font-size: 1.3rem;
+  cursor: text;
+  top: 20px;
+}
+
+label {
+  position: absolute;
+  top: 0;
+  display: block;
+  transition: 0.2s;
+  font-size: 1rem;
+  color: #9b9b9b;
 }
 
 .container {
@@ -50,20 +95,47 @@ select {
 }
 
 #submit-form > hr {
-  border: 1px solid rgba(73, 73, 73, 0.295);
-  margin-bottom: 1rem;
+  border-image: linear-gradient(to right, #11998e, #38ef7d);
+  border-image-slice: 1;
 }
 
-#submit-form > section {
-  padding: 0.3rem;
-  display: flex;
-  justify-content: flex-start;
-  flex-direction: column;
-  align-items: flex-start;
+.form-group {
+  position: relative;
+  padding: 15px 0 0;
+  margin-top: 10px;
+  width: 100%;
 }
 
 .input-error {
-  border: 1px solid red;
-  background-color: rgba(255, 137, 137, 0.4);
-  color: red;
+  padding-bottom: 6px;
+  font-weight: 700;
+  border-width: 3px;
+  border-image: linear-gradient(to right, #991111, #ef3838);
+  border-image-slice: 1;
+}
+
+.form-submit {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+button {
+  outline: none;
+  border: 1px solid #11998e;
+  background-color: #38ef7d;
+  color: white;
+  padding: 0.4rem;
+  font-size: 1.5rem;
+  border-radius: 4px;
+  margin: 0.4rem;
+  cursor: pointer;
+  text-transform: uppercase;
+  transition: all 0.2s ease-in-out;
+}
+
+button:hover {
+  background-color: #11998e;
+  border-color: #38ef7d;
 }
